--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-tokio = { version = "1.25", features = ["rt-multi-thread", "macros", "time", "signal"] }
+tokio = { version = "1.25", features = ["rt-multi-thread", "macros", "time", "signal", "fs", "io-util"] }
 pnet = "0.33"
 structopt = "0.3"
 tracing = "0.1"
 tracing-subscriber = "0.3"
-tabulate = "1.2.0"
-dns-lookup = "1.0.8"
+tabulate = "1.2"
+dns-lookup = "1.0"
+tokio-stream = { version = "0.1", features = ["sync", "fs"] }
