--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,5 @@
-[package]
-name = "leaf"
-version = "0.1.0"
-edition = "2021"
-
-[dependencies]
-tokio = { version = "1.25", features = ["rt-multi-thread", "macros", "time", "signal"] }
-pnet = "0.33"
-structopt = "0.3"
-tracing = "0.1"
-tracing-subscriber = "0.3"
-tabulate = "1.2.0"
-dns-lookup = "1.0.8"
+[workspace]
+members = [
+  "crates/powerutil",
+  "crates/leaf",
+]
