--- a/crates/powerutil/powerutil.service
+++ b/crates/powerutil/powerutil.service
@@ -3,10 +3,9 @@ Description=PowerUtil
 After=multi-user.target
 
 [Service]
+Type=oneshot
 ExecStart=/home/vicp/.cargo/bin/powerutil check --config-file /home/vicp/.powerutil.yaml
 User=root
-Restart=always
-RestartSec=300
 
 [Install]
 WantedBy=multi-user.target
